--- a/x86_64.config
+++ b/x86_64.config
@@ -57,6 +57,7 @@ CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-argon-mod=y
+CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
