--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -77,8 +77,14 @@ jobs:
         CONFIG_FILE: 'Newifi_D2.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customize.sh && ./customize.sh
-        cd openwrt && make defconfig
+        #chmod +x ./customize.sh && ./customize.sh
+        cd openwrt
+        sed -i 's/\/bin\/ash/\/bin\/bash/' package/base-files/files/etc/passwd
+        sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.//g' package/lean/default-settings/files/zzz-default-settings
+        sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
+        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
+        sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci/Makefile
+        make defconfig
         
     - name: Download package
       working-directory: ./openwrt
@@ -94,5 +100,5 @@ jobs:
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
+        name: OpenWrt_Newifi_D2_${{ env.FILE_DATE }}
         path: openwrt/bin
