--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -75,8 +75,15 @@ jobs:
         CONFIG_FILE: 'x86_64.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x ./customizex86.sh && ./customizex86.sh
-        cd openwrt && make defconfig
+        #chmod +x ./customizex86.sh && ./customizex86.sh
+        #cd openwrt && make defconfig
+        cd openwrt
+        sed -i 's/\/bin\/ash/\/bin\/bash/' package/base-files/files/etc/passwd
+        sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.//g' package/lean/default-settings/files/zzz-default-settings
+        sed -i 's/192.168.1.1/192.168.5.2/g' package/base-files/files/bin/config_generate
+        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
+        sed -i 's/luci-theme-bootstrap/luci-theme-argon/g' feeds/luci/collections/luci/Makefile
+        make defconfig
         
     - name: Download package
       working-directory: ./openwrt
@@ -94,5 +101,5 @@ jobs:
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt
+        name: lede_X86_64_${{ env.FILE_DATE }}
         path: openwrt/bin
