--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -104,3 +104,9 @@ jobs:
       with:
         name: lede_newifi_d2_${{ env.FILE_DATE }}
         path: openwrt/bin
+
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@main
+      with:
+        retain_days: 0
+        keep_minimum_runs: 2
