--- a/.github/workflows/Build_OP_Newifi_D2_bak.yml
+++ b/.github/workflows/Build_OP_Newifi_D2_bak.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: Build_Newifi_D2
+name: Build_Newifi_D2_bak
 
 # Add a button to trigger the workflow
 on: 
