--- a/x86_64.config
+++ b/x86_64.config
@@ -95,12 +95,18 @@ CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-argon-mod=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_wget=y
+CONFIG_PACKAGE_kmod-kvm-amd=y
+CONFIG_PACKAGE_kmod-kvm-intel=y
+CONFIG_PACKAGE_kmod-kvm-x86=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_script-utils=y
-CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_tar=y
 CONFIG_PACKAGE_taskd=y
 CONFIG_PACKAGE_tcping=y
@@ -113,13 +119,6 @@ CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
 CONFIG_PACKAGE_zerotier=y
-CONFIG_SING_BOX_WITH_CLASH_API=y
-CONFIG_SING_BOX_WITH_DHCP=y
-CONFIG_SING_BOX_WITH_ECH=y
-CONFIG_SING_BOX_WITH_GVISOR=y
-CONFIG_SING_BOX_WITH_QUIC=y
-CONFIG_SING_BOX_WITH_UTLS=y
-CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
 CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
 CONFIG_TARGET_ROOTFS_INITRAMFS=y
