--- a/.github/workflows/Build_OP_x86_64_bak.yml
+++ b/.github/workflows/Build_OP_x86_64_bak.yml
@@ -72,7 +72,7 @@ jobs:
 
     - name: Configuration Customization - Build_x86_64
       env:
-        CONFIG_FILE: 'x86_64.config'
+        CONFIG_FILE: 'x86_64.bak.config'
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         #chmod +x ./customizex86.sh && ./customizex86.sh
@@ -97,7 +97,7 @@ jobs:
       run: |
         echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
-        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name : Upload artifact
       uses: actions/upload-artifact@master
