--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -106,7 +106,7 @@ jobs:
         path: openwrt/bin
 
     - name: Delete workflow runs
-      uses: Mattraks/delete-workflow-runs@main
+      uses: Mattraks/delete-workflow-runs@master
       with:
         retain_days: 0
         keep_minimum_runs: 2
