--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -9,7 +9,7 @@ name: Build_Newifi_D2
 
 # Add a button to trigger the workflow
 on: 
-  repository_dispatch:
+  #repository_dispatch:
   workflow_dispatch:
 
 jobs:
