--- a/x86_64.config
+++ b/x86_64.config
@@ -202,7 +202,7 @@ CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
-CONFIG_TARGET_ROOTFS_INITRAMFS=y
+# CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=80
 # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
