--- a/x86_64.config
+++ b/x86_64.config
@@ -109,7 +109,7 @@ CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=600
 CONFIG_TARGET_ROOTFS_TARGZ=y
-CONFIG_VMDK_IMAGES=y
+#CONFIG_VMDK_IMAGES=y
 # CONFIG_PACKAGE_libcares is not set
 # CONFIG_PACKAGE_libev is not set
 # CONFIG_PACKAGE_libmbedtls is not set
