--- a/.github/workflows/Build_OP_Newifi_D2.yml
+++ b/.github/workflows/Build_OP_Newifi_D2.yml
@@ -74,9 +74,21 @@ jobs:
         cd openwrt
         sed -i 's/\/bin\/ash/\/bin\/bash/' package/base-files/files/etc/passwd
         sed -i 's/$1$V4UetPzk$CYXluq4wUazHjmCDBCqXF.//g' package/lean/default-settings/files/zzz-default-settings
-        sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
-        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
+        
+        #sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/files/bin/config_generate
+        #sed -i 's/OpenWrt/Xiaomi/g' package/base-files/files/bin/config_generate
+        #sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci/Makefile
+
+        sed -i 's/192.168.1.1/192.168.5.1/g' package/base-files/luci2/bin/config_generate
+        sed -i 's/OpenWrt/Xiaomi/g' package/base-files/luci2/bin/config_generate
+        
+        # luci23.05下修改默认主题：
         sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci/Makefile
+        sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci-light/Makefile
+        sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci-nginx/Makefile
+        sed -i 's/luci-theme-bootstrap/luci-theme-material/g' feeds/luci/collections/luci-ssl-nginx/Makefile
+        #####
+        
         make defconfig
         
     - name: Download package
