--- a/x86_64.config
+++ b/x86_64.config
@@ -110,7 +110,10 @@ CONFIG_SING_BOX_WITH_GVISOR=y
 CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
 CONFIG_SING_BOX_WITH_WIREGUARD=y
+# CONFIG_TARGET_IMAGES_GZIP is not set
+# CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_TARGET_ROOTFS_PARTSIZE=200
+# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 CONFIG_TARGET_ROOTFS_TARGZ=y
 #CONFIG_VMDK_IMAGES=y
 # CONFIG_PACKAGE_libcares is not set
